Throw the rest of the copy in.

--- a/static/index.html
+++ b/static/index.html
@@ -38,7 +38,37 @@
           <em>should I keept going?</em>
         </p>
       </div>
-      <div class='row examples'></div>
+      <div class='row examples'>
+        <div class='span3'>
+          <h4>We do things like:</h4>
+          <ul>
+            <li>wireframes</li>
+            <li>landing pages</li>
+            <li>working websites</li>
+            <li>customer interviews</li>
+            <li>solution interviews</li>
+          </ul>
+        </div>
+        <div class='span3'>
+          <h4>To help you:</h4>
+          <ul>
+            <li>raise money</li>
+            <li>understand your customers</li>
+            <li>test markets</li>
+            <li>do other things</li>
+            <li>something else</li>
+          </ul>
+        </div>
+      </div>
+      <div class='row contact-us'>
+        <h4>5 days. $10k.</h4>
+        <p>
+          We make things simple. A 5 day prototype lasts 5 days and it costs $10,000. You'll work closely with us as we simplify, iterate, and validate. When it's over, you'll have something something something close me. Please please close me.
+        </p>
+        <a href='mailto:hello@fivedayprototype.com'>
+          <button class='btn btn-primary span3 offset3'>Get In Touch</button>
+        </a>
+      </div>
     </div>
   </body>
 </html>
