--- a/static/index.html
+++ b/static/index.html
@@ -66,7 +66,7 @@
           We make things simple. A 5 day prototype lasts 5 days and it costs $10,000. You'll work closely with us as we simplify, iterate, and validate. When it's over, you'll have something something something close me. Please please close me.
         </p>
         <a href='mailto:hello@fivedayprototype.com'>
-          <button class='btn btn-primary span3 offset3'>Get In Touch</button>
+          <div class='span3'>Get In Touch</div>
         </a>
       </div>
     </div>
