Add proxima nova and icons to page.

--- a/static/index.html
+++ b/static/index.html
@@ -16,26 +16,30 @@
     <div class='container'>
       <div class='row summary'>
         <div class='span3'>
-          <div class='circle'></div>
+          <div class='circle'>
+            <img src='images/icon.bulb.png' />
+          </div>
           <h4>Your idea...</h4>
           <p>
             You have an idea. Something that makes money or makes the world a better place. (Ideally both.)
           </p>
         </div>
         <div class='span3'>
-          5 Days
+          <img src='images/calendar.png' />
         </div>
         <div class='span3'>
-          <div class='circle'></div>
+          <div class='circle'>
+            <img src='images/icon.prototype.png' />
+          </div>
           <h4>...prototyped.</h4>
           <p>Your idea is in the world. It may be a wireframe, a working website, a landing page, paying customers, or something else.</p>
         </div>
       </div>
       <div class='row why'>
         <p>
-          <strong>There's a reason we work in 5 day blocks.</strong>
+          <span class='bold'>There's a reason we work in 5 day blocks.</span>
           That's just enough time to make the most important feature (or 2) of your idea concrete. We take your idea (or problem, or market, or customer segment) and find the simplest, most direct way to answer one question:
-          <em>should I keept going?</em>
+          <em>should I keep going?</em>
         </p>
       </div>
       <div class='row examples'>
@@ -61,7 +65,7 @@
         </div>
       </div>
       <div class='row contact-us'>
-        <h4>5 days. $10k.</h4>
+        <h3 class='bold'>5 days. $10k.</h3>
         <p>
           We make things simple. A 5 day prototype lasts 5 days and it costs $10,000. You'll work closely with us as we simplify, iterate, and validate. When it's over, you'll have something something something close me. Please please close me.
         </p>
