Pixel-ish perfect-like design.

--- a/static/index.html
+++ b/static/index.html
@@ -8,14 +8,14 @@
     <div class='page-header'>
       <div class='container'>
         <div class='hero-unit'>
-          <h1>Five Day Prototype</h1>
-          <h3>We get the ideas out of your head <br/> and into the world.</h3>
+          <img class='logo' src='images/logo.png' />
+          <h2>We get the ideas out of your head <br/> and into the world.</h2>
         </div>
       </div>
     </div>
     <div class='container'>
       <div class='row summary'>
-        <div class='span3'>
+        <div class='third'>
           <div class='circle'>
             <img src='images/icon.bulb.png' />
           </div>
@@ -24,16 +24,19 @@
             You have an idea. Something that makes money or makes the world a better place. (Ideally both.)
           </p>
         </div>
-        <div class='span3'>
+        <img class='arrow1' src='images/bg.rarr.png' />
+        <div class='third'>
           <img src='images/calendar.png' />
         </div>
-        <div class='span3'>
+        <img class='arrow2' src='images/bg.rarr.png' />
+        <div class='third'>
           <div class='circle'>
             <img src='images/icon.prototype.png' />
           </div>
           <h4>...prototyped.</h4>
           <p>Your idea is in the world. It may be a wireframe, a working website, a landing page, paying customers, or something else.</p>
         </div>
+        <img class='line-down' src='images/bg.line_down.png' />
       </div>
       <div class='row why'>
         <p>
@@ -43,7 +46,7 @@
         </p>
       </div>
       <div class='row examples'>
-        <div class='span3'>
+        <div class='span3 offset1'>
           <h4>We do things like:</h4>
           <ul>
             <li>wireframes</li>
@@ -56,11 +59,11 @@
         <div class='span3'>
           <h4>To help you:</h4>
           <ul>
-            <li>raise money</li>
             <li>understand your customers</li>
             <li>test markets</li>
             <li>do other things</li>
             <li>something else</li>
+            <li>prepare an investor pitch</li>
           </ul>
         </div>
       </div>
