Adjust font size.

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
       <div class='container'>
         <div class='hero-unit'>
           <img class='logo' src='images/logo.png' />
-          <h2>We get the ideas out of your head <br/> and into the world.</h2>
+          <h2>Get the ideas out of your head <br/> and into the world.</h2>
         </div>
       </div>
     </div>
@@ -19,7 +19,7 @@
           <div class='circle'>
             <img src='images/icon.bulb.png' />
           </div>
-          <h4>Your idea...</h4>
+          <h4 class='bold'>Your idea...</h4>
           <p>
             You have an idea. Something that makes money or makes the world a better place. (Ideally both.)
           </p>
@@ -33,12 +33,12 @@
           <div class='circle'>
             <img src='images/icon.prototype.png' />
           </div>
-          <h4>...prototyped.</h4>
+          <h4 class='bold'>...prototyped.</h4>
           <p>Your idea is in the world. It may be a wireframe, a working website, a landing page, paying customers, or something else.</p>
         </div>
         <img class='line-down' src='images/bg.line_down.png' />
       </div>
-      <div class='row why'>
+      <div class='row why large'>
         <p>
           <span class='bold'>There's a reason we work in 5 day blocks.</span>
           That's just enough time to make the most important feature (or 2) of your idea concrete. We take your idea (or problem, or market, or customer segment) and find the simplest, most direct way to answer one question:
@@ -47,7 +47,7 @@
       </div>
       <div class='row examples'>
         <div class='span3 offset1'>
-          <h4>We do things like:</h4>
+          <h4 class='bold'>We do things like:</h4>
           <ul>
             <li>wireframes</li>
             <li>landing pages</li>
@@ -57,7 +57,7 @@
           </ul>
         </div>
         <div class='span3'>
-          <h4>To help you:</h4>
+          <h4 class='bold'>To help you:</h4>
           <ul>
             <li>understand your customers</li>
             <li>test markets</li>
@@ -67,14 +67,14 @@
           </ul>
         </div>
       </div>
-      <div class='row contact-us'>
+      <div class='row contact-us large'>
         <h3 class='bold'>5 days. $10k.</h3>
         <p>
           We make things simple. A 5 day prototype lasts 5 days and it costs $10,000. You'll work closely with us as we simplify, iterate, and validate. When it's over, you'll have something something something close me. Please please close me.
         </p>
-        <a href='mailto:hello@fivedayprototype.com'>
-          <div class='span3'>Get In Touch</div>
-        </a>
+        <div class='button-container'>
+          <a href='mailto:hello@fivedayprototype.com'>Get In Touch</a>
+        </div>
       </div>
     </div>
   </body>
