Another pass at copy.

--- a/static/index.html
+++ b/static/index.html
@@ -34,15 +34,14 @@
             <img src='images/icon.prototype.png' />
           </div>
           <h4 class='bold'>...prototyped.</h4>
-          <p>Your idea is in the world. It may be a wireframe, a working website, a landing page, paying customers, or something else.</p>
+          <p>You have something real that you can use to find your first customers or pitch investors. Whatever you need.</p>
         </div>
         <img class='line-down' src='images/bg.line_down.png' />
       </div>
       <div class='row why large'>
         <p>
           <span class='bold'>There's a reason we work in 5 day blocks.</span>
-          That's just enough time to make the most important feature (or 2) of your idea concrete. We take your idea (or problem, or market, or customer segment) and find the simplest, most direct way to answer one question:
-          <em>should I keep going?</em>
+          That's just enough time to do one thing really well. And that's the goal of a new startup or product &mdash; to find one thing that customers will pay you for, or pay attention to.
         </p>
       </div>
       <div class='row examples'>
@@ -53,24 +52,25 @@
             <li>landing pages</li>
             <li>working websites</li>
             <li>customer interviews</li>
-            <li>solution interviews</li>
           </ul>
         </div>
         <div class='span3'>
           <h4 class='bold'>To help you:</h4>
           <ul>
-            <li>understand your customers</li>
-            <li>test markets</li>
-            <li>do other things</li>
-            <li>something else</li>
+            <li>find your first customer</li>
             <li>prepare an investor pitch</li>
+            <li>bootstrap your business</li>
+            <li>make your idea even better</li>
           </ul>
         </div>
       </div>
       <div class='row contact-us large'>
         <h3 class='bold'>5 days. $10k.</h3>
         <p>
-          We make things simple. A 5 day prototype lasts 5 days and it costs $10,000. You'll work closely with us as we simplify, iterate, and validate. When it's over, you'll have something something something close me. Please please close me.
+          We make things simple. A 5 day prototype lasts 5 days and it costs $10,000. You'll work closely with us as we simplify, iterate, and validate your idea with potential customers. At the end, we'll help you outline your path toward profitability and success.
+        </p>
+        <p>
+          Let's build something real.
         </p>
         <div class='button-container'>
           <a href='mailto:hello@fivedayprototype.com'>Get In Touch</a>
