Add/update images, tweak styles

--- a/static/index.html
+++ b/static/index.html
@@ -43,6 +43,7 @@
           <span class='bold'>There's a reason we work in 5 day blocks.</span>
           That's just enough time to do one thing really well. And that's the goal of a new startup or product &mdash; to find one thing that customers will pay you for, or pay attention to.
         </p>
+        <img class='arrows-down' src='images/bg.arrows_down.png' />
       </div>
       <div class='row examples'>
         <div class='span3 offset1'>
