--- a/static/index.html
+++ b/static/index.html
@@ -47,11 +47,11 @@
       </div>
       <div class='row examples'>
         <div class='span3 offset1'>
-          <h4 class='bold'>We do things like:</h4>
+          <h4 class='bold'>We build Version 1:</h4>
           <ul>
+            <li>a working website</li>
+            <li>a landing page</li>
             <li>wireframes</li>
-            <li>landing pages</li>
-            <li>working websites</li>
             <li>customer interviews</li>
           </ul>
         </div>
@@ -68,7 +68,7 @@
       <div class='row contact-us large'>
         <h3 class='bold'>5 days. $10k.</h3>
         <p>
-          We make things simple. A 5 day prototype lasts 5 days and it costs $10,000. You'll work closely with us as we simplify, iterate, and validate your idea with potential customers. At the end, we'll help you outline your path toward profitability and success.
+          We make things simple. A 5 day session lasts 5 days and it costs $10,000. You'll work closely with us as we simplify, iterate, and validate your idea with potential customers. At the end, you'll be on your way toward profitability and success.
         </p>
         <p>
           Let's build something real.
